# hinotori

./: README.md
amplify/: team-provider-info.json
amplify/.config/: project-config.json
amplify/backend/: backend-config.json
api/: .env.template  .gitignore  README.md  pyproject.toml
api/app/: main.py
api/app/core/: settings.py
api/app/core/aws/: cognito.py
api/app/domain/auth/: exceptions.py  routes.py  schemas.py  services.py
api/app/domain/shared/: dependencies.py
front/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
front/src/: App.tsx
front/src/api/: client.ts  schemas.ts  template.hbs
front/src/components/: CopyRight.tsx
front/src/components/layouts/: ProtectedLayout.tsx  PublicLayout.tsx
front/src/features/auth/: Login.tsx  LoginPage.tsx
front/src/features/auth/components/: LoginForm.tsx  LoginFormFooterLinks.tsx
front/src/features/following/: Following.tsx
front/src/providers/: app.tsx  auth.tsx
front/src/routes/: index.tsx  protected.tsx  public.tsx
front/src/utils/: storage.ts
