[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["tamaki_tech <oshaburimegane@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
boto3 = "^1.26.31"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.2"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
